reveal prefix update, gitignore, update example urls

--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@ describe('Array', function() {
 				<section>
 					<h2>
 						Example:
-						<a target="_blank" href="react-examples/water/index.html?component=water">
+						<a target="_blank" href="react-examples/water?component=water">
 							Water component
 						</a>
 					</h2>
@@ -466,7 +466,7 @@ it('should be solid when tempeture is above 0 celcious degree', function () {
 				<section>
 					<h2>
 						Adding depedencies to
-						<a target="_blank" href="react-examples/water-dependency/index.html?component=water">
+						<a target="_blank" href="react-examples/water-dependency?component=water">
 							Water Component
 						</a>
 					</h2>
